--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <main>
       <header class="page-title">
-        <h1>Jest kilka takich niesamowitych książek...</h1>
+        <h1>Kilka najciekawszych ksążek</h1>
       </header>
 
       <section class="main-elements">
