starting BEM styling

--- a/hothouse.html
+++ b/hothouse.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <nav class="main-menu">
+        <nav>
             <a href="index.html">HOME</a>
             <a href="peasants.html">Chłopi</a>
             <a href="picnic.html">Piknik na skraju drogi</a>
@@ -19,20 +19,20 @@
     </header>
 
     <main>
-        <header class="page-title">
+        <header>
             <h1>"Cieplarnia"- Brian W. Aldiss</h1>
         </header>
 
-        <section class="main-elements">
-            <h2 class="main-element-header">Opis</h2>
-            <img src="hothouse-cover.jpg" alt="powieść cieplarnia - okładka" class="book-cover">
+        <section>
+            <h2>Opis</h2>
+            <img src="hothouse-cover.jpg" alt="powieść cieplarnia - okładka">
             <p>Powieść fantastycznonaukowa angielskiego pisarza Briana W. Aldissa, opublikowana w 1962 roku. W
                 Polsce wydana w 1983 r. przez Iskry w serii Fantastyka-Przygoda, w tłumaczeniu Marka Marszała
             </p>
         </section>
 
-        <section class="main-elements">
-            <h2 class="main-element-header">Fragnemty</h2>
+        <section>
+            <h2>Fragnemty</h2>
             <article>
                 <h3>Pierwszy fragment</h3>
                 <p>Kilkoro dzieci wyszło w zielone światło, aby się pobawić. Pobiegły konarem, bacznie wypatrując
@@ -60,7 +60,7 @@
         </section>
     </main>
 
-    <footer class="footer">
+    <footer>
         <p>Przemysław Grochowina - Copyleft 1982 - 2020<br />
             Wszystkie opisy książek pochodzą z <a href="https://pl.wikipedia.org/">Wikipedii.</a><br />
             <a href="#">Powrót na górę</a></p>
