--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <header>
-      <nav class="main-menu">
+      <nav>
         <a href="index.html">HOME</a>
         <a href="peasants.html">Chłopi</a>
         <a href="picnic.html">Piknik na skraju drogi</a>
@@ -18,23 +18,23 @@
     </header>
 
     <main>
-      <header class="page-title">
+      <header>
         <h1>Kilka najciekawszych ksążek</h1>
       </header>
 
-      <section class="main-elements">
-        <h2 class="main-element-header">Kim jestem</h2>
-        <p class="standard-text">
+      <section>
+        <h2>Kim jestem</h2>
+        <p>
           Tutaj może być krótki opis o mnie. Co lubię, co robię, co mnie wkurza
           i dlaczego jest to obecna praca:)
         </p>
       </section>
 
-      <section class="main-elements">
-        <h2 class="main-element-header">Lista książek</h2>
+      <section>
+        <h2>Lista książek</h2>
         <article>
           <h3>"Chłopi" - Władysław Stanisław Reymont</h3>
-          <p class="standard-text">
+          <p>
             Powieść społeczno-obyczajowa Władysława Stanisława Reymonta
             publikowana w odcinkach w latach 1902–1908 w „Tygodniku
             Ilustrowanym”, wydana w latach 1904–1909 w Warszawie w wydawnictwie
@@ -43,7 +43,7 @@
         </article>
         <article>
           <h3>"Piknik na skraju drogi"- Arkadij Strugacki, Borys Strugacki</h3>
-          <p class="standard-text">
+          <p>
             Powieść science fiction wydana w 1972, napisana wspólnie przez
             Arkadija i Borisa Strugackich. Powieść opisuje sytuację na Ziemi po
             wylądowaniu obcych i opuszczeniu przez nich planety. Nie wiadomo,
@@ -53,7 +53,7 @@
         </article>
         <article>
           <h3>"Cieplarnia"- Brian W.Aldiss</h3>
-          <p class="standard-text">
+          <p>
             Powieść fantastycznonaukowa angielskiego pisarza Briana W. Aldissa,
             opublikowana w 1962 roku. W Polsce wydana w 1983 r. przez Iskry w
             serii Fantastyka-Przygoda, w tłumaczeniu Marka Marszała
@@ -62,9 +62,9 @@
       </section>
     </main>
 
-    <footer class="footer">
+    <footer>
       <p>
-        <i>Przemysław Grochowina - &#x1f12f; Copyleft 1982 - 2020</i><br />
+        <i>Przemysław Grochowina - Copyleft 1982 - 2020</i><br />
         Wszystkie opisy książek pochodzą z
         <a href="https://pl.wikipedia.org/">Wikipedii.</a><br />
         <a href="#">Powrót na górę</a>
