--- a/peasants.html
+++ b/peasants.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <nav class="main-menu">
+        <nav>
             <a href="index.html">HOME</a>
             <a href="peasants.html">Chłopi</a>
             <a href="picnic.html">Piknik na skraju drogi</a>
@@ -19,20 +19,20 @@
     </header>
 
     <main>
-        <header class="page-title">
+        <header>
             <h1>"Chłopi" - Władysław Stanisław Reymont</h1>
         </header>
 
-        <section class="main-elements">
-            <h2 class="main-element-header">Opis</h2>
-            <img src="peasants-cover.jpg" alt="powieść chłopi - okładka" class="book-cover">
+        <section>
+            <h2>Opis</h2>
+            <img src="peasants-cover.jpg" alt="powieść chłopi - okładka">
             <p>Powieść społeczno-obyczajowa Władysława Stanisława Reymonta publikowana w odcinkach w latach 1902–1908 w
                 „Tygodniku Ilustrowanym”, wydana w latach 1904–1909[1] w Warszawie w wydawnictwie „Gebethner i Wolff”.
             </p>
         </section>
 
-        <section class="main-elements">
-            <h2 class="main-element-header">Fragnemty</h2>
+        <section>
+            <h2>Fragnemty</h2>
             <article>
                 <h3>Część pierwsza - Jesień</h3>
                 <p>Niewiela mi potrza, to se u dobrych ludzi uproszę i do zwiesny z Pana Jezusową łaską
@@ -67,7 +67,7 @@
         </section>
     </main>
 
-    <footer class="footer">
+    <footer>
         <p>Przemysław Grochowina - Copyleft 1982 - 2020<br />
             Wszystkie opisy książek pochodzą z <a href="https://pl.wikipedia.org/">Wikipedii.</a><br />
             <a href="#">Powrót na górę</a></p>
