--- a/picnic.html
+++ b/picnic.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <nav class="main-menu">
+        <nav>
             <a href="index.html">HOME</a>
             <a href="peasants.html">Chłopi</a>
             <a href="picnic.html">Piknik na skraju drogi</a>
@@ -19,20 +19,20 @@
     </header>
 
     <main>
-        <header class="page-title">
+        <header>
             <h1>"Piknik na skraju drogi"- Arkadij Strugacki, Borys Strugacki</h1>
         </header>
 
-        <section class="main-elements">
-            <h2 class="main-element-header">Opis</h2>
-            <img src="picnic-cover.jpg" alt="powieść piknik na skraju drogi - okładka" class="book-cover">
+        <section>
+            <h2>Opis</h2>
+            <img src="picnic-cover.jpg" alt="powieść piknik na skraju drogi - okładka">
             <p>Powieść science fiction wydana w 1972, napisana wspólnie przez Arkadija i Borisa Strugackich. Powieść
                 opisuje sytuację na Ziemi po wylądowaniu obcych i opuszczeniu przez nich planety. Nie wiadomo, kim
                 byli obcy, jednakże pozostawili po sobie sporo śladów w sześciu Strefach Lądowania.</p>
         </section>
 
-        <section class="main-elements">
-            <h2 class="main-element-header">Fragnemty</h2>
+        <section>
+            <h2>Fragnemty</h2>
             <article>
                 <h3>Pierwszy fragment</h3>
                 <p>Wtedy Red chował się w najdalszym kącie i stamtąd patrzył ze strachem, jak ojciec zdziera z siebie
@@ -59,7 +59,7 @@
         </section>
     </main>
 
-    <footer class="footer">
+    <footer>
         <p>Przemysław Grochowina - Copyleft 1982 - 2020<br />
             Wszystkie opisy książek pochodzą z <a href="https://pl.wikipedia.org/">Wikipedii.</a><br />
             <a href="#">Powrót na górę</a></p>
