auto fill with JS added

--- a/index.html
+++ b/index.html
@@ -52,11 +52,17 @@
           </p>
         </article>
         <article>
-          <h3>"Cieplarnia"- Brian W.Aldiss</h3>
+          <h3>"Cieplarnia"- Brian W. Aldiss</h3>
           <p>
             Powieść fantastycznonaukowa angielskiego pisarza Briana W. Aldissa,
             opublikowana w 1962 roku. W Polsce wydana w 1983 r. przez Iskry w
             serii Fantastyka-Przygoda, w tłumaczeniu Marka Marszała
+          </p>
+        </article>
+        <article>
+          <h3 class="auto-fill-header"></h3>
+          <p class="auto-fill-pragraph">
+            
           </p>
         </article>
       </section>
