after styling footer

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       </nav>
     </header>
 
-    <main>
+    <main class="main">
       <header>
-        <h1>Kilka najciekawszych ksążek</h1>
+        <h1>Kilka najciekawszych książek</h1>
       </header>
 
       <section>
@@ -61,19 +61,17 @@
         </article>
         <article>
           <h3 class="auto-fill-header"></h3>
-          <p class="auto-fill-pragraph">
-            
-          </p>
+          <p class="auto-fill-pragraph"></p>
         </article>
       </section>
     </main>
 
-    <footer>
+    <footer class="footer">
       <p>
-        <i>Przemysław Grochowina - Copyleft 1982 - 2020</i><br />
+        <i class=>Przemysław Grochowina - Copyleft 1982 - 2020</i><br />
         Wszystkie opisy książek pochodzą z
-        <a href="https://pl.wikipedia.org/">Wikipedii.</a><br />
-        <a href="#">Powrót na górę</a>
+        <a href="https://pl.wikipedia.org/" target="_blank" class="footer__link">Wikipedii.</a><br />
+        <a href="#" class="footer__link footer__link--return-up">Powrót</a>
       </p>
     </footer>
     <script src="main.js"></script>
