after styling menu

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
   <body>
     <header>
-      <nav>
-        <a href="index.html">HOME</a>
-        <a href="peasants.html">Chłopi</a>
-        <a href="picnic.html">Piknik na skraju drogi</a>
-        <a href="hothouse.html">Cieplarnia</a>
+      <nav class="navigation">
+        <a href="index.html" class="navigation__link">HOME</a>
+        <a href="peasants.html"  class="navigation__link">Chłopi</a>
+        <a href="picnic.html"  class="navigation__link">Piknik na skraju drogi</a>
+        <a href="hothouse.html"  class="navigation__link navigation__link--last-one">Cieplarnia</a>
       </nav>
     </header>
 
