--- a/index.html
+++ b/index.html
@@ -18,32 +18,32 @@
     </header>
 
     <main class="main">
-      <header>
+      <header class="main__header">
         <h1>Kilka najciekawszych książek</h1>
       </header>
 
-      <section>
+      <section class="section-intro">
         <h2>Kim jestem</h2>
-        <p>
+        <p class="section-intro__paragraph">
           Tutaj może być krótki opis o mnie. Co lubię, co robię, co mnie wkurza
           i dlaczego jest to obecna praca:)
         </p>
       </section>
 
-      <section>
-        <h2>Lista książek</h2>
-        <article>
+      <section class="section">
+        <h2 class="section__header">Lista książek</h2>
+        <article class="article">
           <h3>"Chłopi" - Władysław Stanisław Reymont</h3>
-          <p>
+          <p class="article__paragraph">
             Powieść społeczno-obyczajowa Władysława Stanisława Reymonta
             publikowana w odcinkach w latach 1902–1908 w „Tygodniku
             Ilustrowanym”, wydana w latach 1904–1909 w Warszawie w wydawnictwie
             „Gebethner i Wolff”.
           </p>
         </article>
-        <article>
+        <article class="article">
           <h3>"Piknik na skraju drogi"- Arkadij Strugacki, Borys Strugacki</h3>
-          <p>
+          <p class="article__paragraph">
             Powieść science fiction wydana w 1972, napisana wspólnie przez
             Arkadija i Borisa Strugackich. Powieść opisuje sytuację na Ziemi po
             wylądowaniu obcych i opuszczeniu przez nich planety. Nie wiadomo,
@@ -51,24 +51,24 @@
             Strefach Lądowania.
           </p>
         </article>
-        <article>
+        <article class="article">
           <h3>"Cieplarnia"- Brian W. Aldiss</h3>
-          <p>
+          <p class="article__paragraph">
             Powieść fantastycznonaukowa angielskiego pisarza Briana W. Aldissa,
             opublikowana w 1962 roku. W Polsce wydana w 1983 r. przez Iskry w
             serii Fantastyka-Przygoda, w tłumaczeniu Marka Marszała
           </p>
         </article>
-        <article>
+        <article class="article">
           <h3 class="auto-fill-header"></h3>
-          <p class="auto-fill-pragraph"></p>
+          <p class="article__paragraph auto-fill-pragraph"></p>
         </article>
       </section>
     </main>
 
     <footer class="footer">
-      <p>
-        <i class=>Przemysław Grochowina - Copyleft 1982 - 2020</i><br />
+      <p class="footer__paragraph">
+        Przemysław Grochowina - Copyleft 1982 - 2020<br />
         Wszystkie opisy książek pochodzą z
         <a href="https://pl.wikipedia.org/" target="_blank" class="footer__link">Wikipedii.</a><br />
         <a href="#" class="footer__link footer__link--return-up">Powrót</a>
