finished styling all subpages

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </header>
 
       <section class="section-intro">
-        <h2>Kim jestem</h2>
+        <h2 class="section-intro__header">Kim jestem</h2>
         <p class="section-intro__paragraph">
           Tutaj może być krótki opis o mnie. Co lubię, co robię, co mnie wkurza
           i dlaczego jest to obecna praca:)
@@ -33,7 +33,7 @@
       <section class="section">
         <h2 class="section__header">Lista książek</h2>
         <article class="article">
-          <h3>"Chłopi" - Władysław Stanisław Reymont</h3>
+          <h3 class="article__header">"Chłopi" - Władysław Stanisław Reymont</h3>
           <p class="article__paragraph">
             Powieść społeczno-obyczajowa Władysława Stanisława Reymonta
             publikowana w odcinkach w latach 1902–1908 w „Tygodniku
@@ -42,7 +42,7 @@
           </p>
         </article>
         <article class="article">
-          <h3>"Piknik na skraju drogi"- Arkadij Strugacki, Borys Strugacki</h3>
+          <h3 class="article__header">"Piknik na skraju drogi"- Arkadij Strugacki, Borys Strugacki</h3>
           <p class="article__paragraph">
             Powieść science fiction wydana w 1972, napisana wspólnie przez
             Arkadija i Borisa Strugackich. Powieść opisuje sytuację na Ziemi po
@@ -52,7 +52,7 @@
           </p>
         </article>
         <article class="article">
-          <h3>"Cieplarnia"- Brian W. Aldiss</h3>
+          <h3 class="article__header">"Cieplarnia"- Brian W. Aldiss</h3>
           <p class="article__paragraph">
             Powieść fantastycznonaukowa angielskiego pisarza Briana W. Aldissa,
             opublikowana w 1962 roku. W Polsce wydana w 1983 r. przez Iskry w
@@ -60,7 +60,7 @@
           </p>
         </article>
         <article class="article">
-          <h3 class="auto-fill-header"></h3>
+          <h3 class="auto-fill-header article__header"></h3>
           <p class="article__paragraph auto-fill-pragraph"></p>
         </article>
       </section>
