--- a/hothouse.html
+++ b/hothouse.html
@@ -10,46 +10,46 @@
 
 <body>
     <header>
-        <nav>
-            <a href="index.html">HOME</a>
-            <a href="peasants.html">Chłopi</a>
-            <a href="picnic.html">Piknik na skraju drogi</a>
-            <a href="hothouse.html">Cieplarnia</a>
-        </nav>
+        <nav class="navigation">
+            <a href="index.html" class="navigation__link">HOME</a>
+            <a href="peasants.html"  class="navigation__link">Chłopi</a>
+            <a href="picnic.html"  class="navigation__link">Piknik na skraju drogi</a>
+            <a href="hothouse.html"  class="navigation__link navigation__link--last-one">Cieplarnia</a>
+          </nav>
     </header>
 
-    <main>
-        <header>
+    <main class="main">
+        <header class="main__header">
             <h1>"Cieplarnia"- Brian W. Aldiss</h1>
         </header>
 
-        <section>
-            <h2>Opis</h2>
-            <img src="hothouse-cover.jpg" alt="powieść cieplarnia - okładka">
-            <p>Powieść fantastycznonaukowa angielskiego pisarza Briana W. Aldissa, opublikowana w 1962 roku. W
+        <section class="section-intro">
+            <h2 class="section-intro__header">Opis</h2>
+            <img src="hothouse-cover.jpg" alt="powieść cieplarnia - okładka" class="section-intro_image">
+            <p class="section-intro__paragraph">Powieść fantastycznonaukowa angielskiego pisarza Briana W. Aldissa, opublikowana w 1962 roku. W
                 Polsce wydana w 1983 r. przez Iskry w serii Fantastyka-Przygoda, w tłumaczeniu Marka Marszała
             </p>
         </section>
 
-        <section>
-            <h2>Fragnemty</h2>
-            <article>
-                <h3>Pierwszy fragment</h3>
-                <p>Kilkoro dzieci wyszło w zielone światło, aby się pobawić. Pobiegły konarem, bacznie wypatrując
+        <section class="section">
+            <h2 class="section__header">Fragnemty</h2>
+            <article class="article">
+                <h3 class="article__header">Pierwszy fragment</h3>
+                <p class="article__paragraph">Kilkoro dzieci wyszło w zielone światło, aby się pobawić. Pobiegły konarem, bacznie wypatrując
                     wrogów, nawołując się ściszonymi głosami. Szybko rosnący jagodobij przemykał ukosem do góry, kiście
                     jego lepkich owoców połyskiwały szkarłatem. Widać było, że jest zaaferowany wysiewem i dzieciom nic
                     nie grozi z jego strony. Minęły go pędem. Z pory ich snu skorzystał parzyperz, wyrastając za skrajem
                     terytorium grupy. Drgnął, gdy się przybliżyły.</p>
             </article>
-            <article>
-                <h3>Drugi fragment</h3>
-                <p>Gren pognał z powrotem. Z powietrza spadła na niego osica, obwieszczając wściekłość tubalnym
+            <article class="article">
+                <h3 class="article__header">Drugi fragment</h3>
+                <p class="article__paragraph">Gren pognał z powrotem. Z powietrza spadła na niego osica, obwieszczając wściekłość tubalnym
                     brzęczeniem. Odrzucił ją ciosem dłoni, nie zwalniając biegu. Rzadki okaz dziecka mężczyzny, lat
                     dziewięć, już bardzo śmiały, rączy i dumny. Szybko dotarł do chaty Prowodyrki.</p>
             </article>
-            <article>
-                <h3>Trzeci fragmnet</h3>
-                <p>Dziewczynka zdążyła się jeszcze podnieść na kolana. Roślinni drapieżcy nie są tak szybcy jak ludzie.
+            <article class="article">
+                <h3 class="article__header">Trzeci fragmnet</h3>
+                <p class="article__paragraph">Dziewczynka zdążyła się jeszcze podnieść na kolana. Roślinni drapieżcy nie są tak szybcy jak ludzie.
                     Zielone zęby zatrzasnęły się na jej talii. Wyczuwszy obecność ofiary przez pojedynczą warstwę
                     zieleni, gębokłap wyszedł na pozycję pod liściem. Przypominał nieco ramę – tylko para
                     zrogowaciałych, kwadratowych szczęk na zawiasach, z licznymi długimi zębami. Z narożnika ramy, na
@@ -60,11 +60,14 @@
         </section>
     </main>
 
-    <footer>
-        <p>Przemysław Grochowina - Copyleft 1982 - 2020<br />
-            Wszystkie opisy książek pochodzą z <a href="https://pl.wikipedia.org/">Wikipedii.</a><br />
-            <a href="#">Powrót na górę</a></p>
-    </footer>
+    <footer class="footer">
+        <p class="footer__paragraph">
+          Przemysław Grochowina - Copyleft 1982 - 2020<br />
+          Wszystkie opisy książek pochodzą z
+          <a href="https://pl.wikipedia.org/" target="_blank" class="footer__link">Wikipedii.</a><br />
+          <a href="#" class="footer__link footer__link--return-up">Powrót</a>
+        </p>
+      </footer>
 </body>
 
 </html>
