--- a/peasants.html
+++ b/peasants.html
@@ -10,38 +10,38 @@
 
 <body>
     <header>
-        <nav>
-            <a href="index.html">HOME</a>
-            <a href="peasants.html">Chłopi</a>
-            <a href="picnic.html">Piknik na skraju drogi</a>
-            <a href="hothouse.html">Cieplarnia</a>
-        </nav>
+        <nav class="navigation">
+            <a href="index.html" class="navigation__link">HOME</a>
+            <a href="peasants.html"  class="navigation__link">Chłopi</a>
+            <a href="picnic.html"  class="navigation__link">Piknik na skraju drogi</a>
+            <a href="hothouse.html"  class="navigation__link navigation__link--last-one">Cieplarnia</a>
+          </nav>
     </header>
 
-    <main>
-        <header>
+    <main class="main">
+        <header class="main__header">
             <h1>"Chłopi" - Władysław Stanisław Reymont</h1>
         </header>
 
-        <section>
-            <h2>Opis</h2>
-            <img src="peasants-cover.jpg" alt="powieść chłopi - okładka">
-            <p>Powieść społeczno-obyczajowa Władysława Stanisława Reymonta publikowana w odcinkach w latach 1902–1908 w
+        <section class="section-intro">
+            <h2 class="section-intro__header">Opis</h2>
+            <img src="peasants-cover.jpg" alt="powieść chłopi - okładka" class="section-intro_image">
+            <p class="section-intro__paragraph">Powieść społeczno-obyczajowa Władysława Stanisława Reymonta publikowana w odcinkach w latach 1902–1908 w
                 „Tygodniku Ilustrowanym”, wydana w latach 1904–1909[1] w Warszawie w wydawnictwie „Gebethner i Wolff”.
             </p>
         </section>
 
-        <section>
-            <h2>Fragnemty</h2>
-            <article>
-                <h3>Część pierwsza - Jesień</h3>
-                <p>Niewiela mi potrza, to se u dobrych ludzi uproszę i do zwiesny z Pana Jezusową łaską
+        <section class="section">
+            <h2 class="section__header">Fragnemty</h2>
+            <article class="article">
+                <h3 class="article__header">Część pierwsza - Jesień</h3>
+                <p class="article__paragraph">Niewiela mi potrza, to se u dobrych ludzi uproszę i do zwiesny z Pana Jezusową łaską
                     przechyrlam, a jeszcze się coś niecoś grosza uścibi — to rychtyk la nich na przednówek... krewniaki
                     przeciech...</p>
             </article>
-            <article>
-                <h3>Część druga - Zima</h3>
-                <p>...Rzędy kobiet czerwieniły się na kopaniskach... rozlegał się gruchot zsypywanych do wozów
+            <article class="article">
+                <h3 class="article__header">Część druga - Zima</h3>
+                <p class="article__paragraph">...Rzędy kobiet czerwieniły się na kopaniskach... rozlegał się gruchot zsypywanych do wozów
                     kartofli...
                     miejscam orano jeszcze pod siew... stada krów srokatych pasły się na ugorach... długie, popielate
                     zagony
@@ -49,16 +49,16 @@
                     wytartych,
                     zrudziałych łąkach... krowa gdzieś zaryczała... </p>
             </article>
-            <article>
-                <h3>Część trzecia - Wiosna</h3>
-                <p>Ksiądz szedł coraz wolniej, czasem przystawał, aby odetchnąć, to znowu obejrzał się na swoje siwki,
+            <article class="article">
+                <h3 class="article__header">Część trzecia - Wiosna</h3>
+                <p class="article__paragraph">Ksiądz szedł coraz wolniej, czasem przystawał, aby odetchnąć, to znowu obejrzał się na swoje siwki,
                     to
                     przyglądał się chłopakom, obtłukującym kamieniami ogromną gruszę, aż hurmem przybiegli do niego i
                     chowając ręce za siebie całowali w rękaw sutanny.</p>
             </article>
-            <article>
-                <h3>Część czwarta - Lato</h3>
-                <p>Wzięli się chyżo za robotę i w cichości, że ino słychać było dziabanie motyczek o twardą ziemię, a
+            <article class="article">
+                <h3 class="article__header">Część czwarta - Lato</h3>
+                <p class="article__paragraph">Wzięli się chyżo za robotę i w cichości, że ino słychać było dziabanie motyczek o twardą ziemię, a
                     czasem
                     suchy dźwięk żelaza o kamień. Czasami ktoś niektoś wyprostował zgięty i zbolały grzbiet, odetchnął
                     głęboko, popatrzył bezmyślnie na siejącego przed nimi i znowu kopał, wybierał z szarej ziemi żółte
@@ -67,11 +67,14 @@
         </section>
     </main>
 
-    <footer>
-        <p>Przemysław Grochowina - Copyleft 1982 - 2020<br />
-            Wszystkie opisy książek pochodzą z <a href="https://pl.wikipedia.org/">Wikipedii.</a><br />
-            <a href="#">Powrót na górę</a></p>
-    </footer>
+    <footer class="footer">
+        <p class="footer__paragraph">
+          Przemysław Grochowina - Copyleft 1982 - 2020<br />
+          Wszystkie opisy książek pochodzą z
+          <a href="https://pl.wikipedia.org/" target="_blank" class="footer__link">Wikipedii.</a><br />
+          <a href="#" class="footer__link footer__link--return-up">Powrót</a>
+        </p>
+      </footer>
 </body>
 
 </html>
