--- a/picnic.html
+++ b/picnic.html
@@ -10,32 +10,32 @@
 
 <body>
     <header>
-        <nav>
-            <a href="index.html">HOME</a>
-            <a href="peasants.html">Chłopi</a>
-            <a href="picnic.html">Piknik na skraju drogi</a>
-            <a href="hothouse.html">Cieplarnia</a>
-        </nav>
+        <nav class="navigation">
+            <a href="index.html" class="navigation__link">HOME</a>
+            <a href="peasants.html"  class="navigation__link">Chłopi</a>
+            <a href="picnic.html"  class="navigation__link">Piknik na skraju drogi</a>
+            <a href="hothouse.html"  class="navigation__link navigation__link--last-one">Cieplarnia</a>
+          </nav>
     </header>
 
-    <main>
-        <header>
+    <main class="main">
+        <header class="main__header">
             <h1>"Piknik na skraju drogi"- Arkadij Strugacki, Borys Strugacki</h1>
         </header>
 
-        <section>
-            <h2>Opis</h2>
-            <img src="picnic-cover.jpg" alt="powieść piknik na skraju drogi - okładka">
-            <p>Powieść science fiction wydana w 1972, napisana wspólnie przez Arkadija i Borisa Strugackich. Powieść
+        <section class="section-intro">
+            <h2 class="section-intro__header">Opis</h2>
+            <img src="picnic-cover.jpg" alt="powieść piknik na skraju drogi - okładka" class="section-intro_image">
+            <p class="section-intro__paragraph">Powieść science fiction wydana w 1972, napisana wspólnie przez Arkadija i Borisa Strugackich. Powieść
                 opisuje sytuację na Ziemi po wylądowaniu obcych i opuszczeniu przez nich planety. Nie wiadomo, kim
                 byli obcy, jednakże pozostawili po sobie sporo śladów w sześciu Strefach Lądowania.</p>
         </section>
 
-        <section>
-            <h2>Fragnemty</h2>
-            <article>
-                <h3>Pierwszy fragment</h3>
-                <p>Wtedy Red chował się w najdalszym kącie i stamtąd patrzył ze strachem, jak ojciec zdziera z siebie
+        <section class="section">
+            <h2 class="section__header">Fragnemty</h2>
+            <article class="article">
+                <h3 class="article__header">Pierwszy fragment</h3>
+                <p class="article__paragraph">Wtedy Red chował się w najdalszym kącie i stamtąd patrzył ze strachem, jak ojciec zdziera z siebie
                     roboczą kurtkę i rzuca matce, jak ściąga z olbrzymich stóp zdeptane buty, jak wpycha je pod wieszak,
                     a sam w skarpetkach lepko człapie do łazienki pod prysznic i długo się tam chlapie, klepie po mokrym
                     cielsku, trzaska miednicami, coś mamrocze pod nosem, a potem ryczy na cały dom: „Maria! Zasnęłaś
@@ -44,14 +44,14 @@
                     wtedy można było wyjrzeć na świat boży, wdrapać się mu na kolana i wypytywać, którego majstra i
                     którego inżyniera ojciec dzisiaj utopił w stężonym kwasie siarkowym…</p>
             </article>
-            <article>
-                <h3>Drugi fragment</h3>
-                <p>Przejdę, przejdę, myślał Red. Nie pierwszy raz, przecież przez całe życie właśnie tak, po szyję w
+            <article class="article">
+                <h3 class="article__header">Drugi fragment</h3>
+                <p class="article__paragraph">Przejdę, przejdę, myślał Red. Nie pierwszy raz, przecież przez całe życie właśnie tak, po szyję w
                     gównie, a nad głową pioruny, zawsze tak było…</p>
             </article>
-            <article>
-                <h3>Trzeci fragmnet</h3>
-                <p>Był zimny i spokojny, wiedział co zaraz się stanie, wiedział, że nie będzie na to patrzeć, ale na
+            <article class="article">
+                <h3 class="article__header">Trzeci fragmnet</h3>
+                <p class="article__paragraph">Był zimny i spokojny, wiedział co zaraz się stanie, wiedział, że nie będzie na to patrzeć, ale na
                     razie nie musiał jeszcze odwracać oczu, więc patrzył i nic szczególnego nie odczuwał, może tylko
                     gdzieś – bardzo, bardzo głęboko – niespokojnie obudził się pewien robak i poruszył kłującym łebkiem.
                 </p>
@@ -59,11 +59,14 @@
         </section>
     </main>
 
-    <footer>
-        <p>Przemysław Grochowina - Copyleft 1982 - 2020<br />
-            Wszystkie opisy książek pochodzą z <a href="https://pl.wikipedia.org/">Wikipedii.</a><br />
-            <a href="#">Powrót na górę</a></p>
-    </footer>
+    <footer class="footer">
+        <p class="footer__paragraph">
+          Przemysław Grochowina - Copyleft 1982 - 2020<br />
+          Wszystkie opisy książek pochodzą z
+          <a href="https://pl.wikipedia.org/" target="_blank" class="footer__link">Wikipedii.</a><br />
+          <a href="#" class="footer__link footer__link--return-up">Powrót</a>
+        </p>
+      </footer>
 </body>
 
 </html>
