--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <header>
+    <header class="navigation-header">
       <nav class="navigation">
         <a href="index.html" class="navigation__link">HOME</a>
         <a href="peasants.html"  class="navigation__link">Chłopi</a>
@@ -60,8 +60,8 @@
           </p>
         </article>
         <article class="article">
-          <h3 class="auto-fill-header article__header"></h3>
-          <p class="article__paragraph auto-fill-pragraph"></p>
+          <h3 class="article__header article__header--js"></h3>
+          <p class="article__paragraph article__paragraph--js"></p>
         </article>
       </section>
     </main>
