--- a/picnic.html
+++ b/picnic.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="navigation-header">
         <nav class="navigation">
             <a href="index.html" class="navigation__link">HOME</a>
             <a href="peasants.html"  class="navigation__link">Chłopi</a>
