navigation version unfinished done

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
   <body>
     <header class="navigation-header">
-      <nav class="navigation">
+      <button class="hamburger hamburger--js" aria-label="Otwórz menu">🍤</button>
+      <nav class="navigation navigation--js">
         <a href="index.html" class="navigation__link">HOME</a>
         <a href="peasants.html"  class="navigation__link">Chłopi</a>
         <a href="picnic.html"  class="navigation__link">Piknik na skraju drogi</a>
