--- a/hothouse.html
+++ b/hothouse.html
@@ -11,13 +11,14 @@
 
 <body>
     <header class="navigation-header">
-        <nav class="navigation">
-            <a href="index.html" class="navigation__link">HOME</a>
-            <a href="peasants.html"  class="navigation__link">Chłopi</a>
-            <a href="picnic.html"  class="navigation__link">Piknik na skraju drogi</a>
-            <a href="hothouse.html"  class="navigation__link navigation__link--last-one">Cieplarnia</a>
-          </nav>
-    </header>
+        <button class="hamburger hamburger--js" aria-label="Otwórz menu">🍤</button>
+        <nav class="navigation navigation--js">
+          <a href="index.html" class="navigation__link">HOME</a>
+          <a href="peasants.html"  class="navigation__link">Chłopi</a>
+          <a href="picnic.html"  class="navigation__link">Piknik na skraju drogi</a>
+          <a href="hothouse.html"  class="navigation__link navigation__link--last-one">Cieplarnia</a>
+        </nav>
+      </header>
 
     <main class="main">
         <header class="main__header">
