navigation version-2 unfinished done

--- a/picnic.html
+++ b/picnic.html
@@ -69,6 +69,7 @@
           <a href="#" class="footer__link footer__link--return-up">Powrót</a>
         </p>
       </footer>
+      <script src="main.js"></script>
 </body>
 
 </html>
