--- a/peasants.html
+++ b/peasants.html
@@ -77,6 +77,7 @@
           <a href="#" class="footer__link footer__link--return-up">Powrót</a>
         </p>
       </footer>
+      <script src="main.js"></script>
 </body>
 
 </html>
