BEM with SASS syntax

--- a/hothouse.html
+++ b/hothouse.html
@@ -9,14 +9,14 @@
     <link href="normalize.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
-    <header class="navigation-header">
+<body class="body">
+    <header class="navigation">
         <button class="hamburger hamburger--js" aria-label="Otwórz menu">🍤</button>
-        <nav class="navigation navigation--js">
+        <nav class="navigation__area navigation--js">
           <a href="index.html" class="navigation__link">HOME</a>
-          <a href="peasants.html"  class="navigation__link">Chłopi</a>
-          <a href="picnic.html"  class="navigation__link">Piknik na skraju drogi</a>
-          <a href="hothouse.html"  class="navigation__link navigation__link--last-one">Cieplarnia</a>
+          <a href="peasants.html" class="navigation__link">Chłopi</a>
+          <a href="picnic.html" class="navigation__link">Piknik na skraju drogi</a>
+          <a href="hothouse.html" class="navigation__link navigation__link--last-one">Cieplarnia</a>
         </nav>
       </header>
 
@@ -27,7 +27,7 @@
 
         <section class="section-intro">
             <h2 class="section-intro__header">Opis</h2>
-            <img src="hothouse-cover.jpg" alt="powieść cieplarnia - okładka" class="section-intro_image">
+            <img src="hothouse-cover.jpg" alt="powieść cieplarnia - okładka" class="section-intro__image">
             <p class="section-intro__paragraph">Powieść fantastycznonaukowa angielskiego pisarza Briana W. Aldissa, opublikowana w 1962 roku. W
                 Polsce wydana w 1983 r. przez Iskry w serii Fantastyka-Przygoda, w tłumaczeniu Marka Marszała
             </p>
