--- a/picnic.html
+++ b/picnic.html
@@ -9,14 +9,14 @@
     <link href="normalize.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
-    <header class="navigation-header">
+<body class="body">
+    <header class="navigation">
         <button class="hamburger hamburger--js" aria-label="Otwórz menu">🍤</button>
-        <nav class="navigation navigation--js">
+        <nav class="navigation__area navigation--js">
           <a href="index.html" class="navigation__link">HOME</a>
-          <a href="peasants.html"  class="navigation__link">Chłopi</a>
-          <a href="picnic.html"  class="navigation__link">Piknik na skraju drogi</a>
-          <a href="hothouse.html"  class="navigation__link navigation__link--last-one">Cieplarnia</a>
+          <a href="peasants.html" class="navigation__link">Chłopi</a>
+          <a href="picnic.html" class="navigation__link">Piknik na skraju drogi</a>
+          <a href="hothouse.html" class="navigation__link navigation__link--last-one">Cieplarnia</a>
         </nav>
       </header>
 
@@ -27,7 +27,7 @@
 
         <section class="section-intro">
             <h2 class="section-intro__header">Opis</h2>
-            <img src="picnic-cover.jpg" alt="powieść piknik na skraju drogi - okładka" class="section-intro_image">
+            <img src="picnic-cover.jpg" alt="powieść piknik na skraju drogi - okładka" class="section-intro__image">
             <p class="section-intro__paragraph">Powieść science fiction wydana w 1972, napisana wspólnie przez Arkadija i Borisa Strugackich. Powieść
                 opisuje sytuację na Ziemi po wylądowaniu obcych i opuszczeniu przez nich planety. Nie wiadomo, kim
                 byli obcy, jednakże pozostawili po sobie sporo śladów w sześciu Strefach Lądowania.</p>
