--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <link href="normalize.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
-  <header class="navigation-header">
+<body class="body">
+  <header class="navigation">
     <button class="hamburger hamburger--js" aria-label="Otwórz menu">🍤</button>
-    <nav class="navigation navigation--js">
+    <nav class="navigation__area navigation--js">
       <a href="index.html" class="navigation__link">HOME</a>
       <a href="peasants.html" class="navigation__link">Chłopi</a>
       <a href="picnic.html" class="navigation__link">Piknik na skraju drogi</a>
