headers with ::before

--- a/hothouse.html
+++ b/hothouse.html
@@ -34,7 +34,7 @@
         </section>
 
         <section class="section">
-            <h2 class="section__header">Fragnemty</h2>
+            <h2 class="section__header">Fragmenty</h2>
             <article class="article">
                 <h3 class="article__header">Pierwszy fragment</h3>
                 <p class="article__paragraph">Kilkoro dzieci wyszło w zielone światło, aby się pobawić. Pobiegły konarem, bacznie wypatrując
