--- a/peasants.html
+++ b/peasants.html
@@ -35,7 +35,7 @@
         </section>
 
         <section class="section">
-            <h2 class="section__header">Fragnemty</h2>
+            <h2 class="section__header">Fragmenty</h2>
             <article class="article">
                 <h3 class="article__header">Część pierwsza - Jesień</h3>
                 <p class="article__paragraph">Niewiela mi potrza, to se u dobrych ludzi uproszę i do zwiesny z Pana
