--- a/hothouse.html
+++ b/hothouse.html
@@ -13,12 +13,12 @@
     <header class="navigation">
         <button class="hamburger hamburger--js" aria-label="Otwórz menu">🍤</button>
         <nav class="navigation__area navigation--js">
-          <a href="index.html" class="navigation__link">HOME</a>
-          <a href="peasants.html" class="navigation__link">Chłopi</a>
-          <a href="picnic.html" class="navigation__link">Piknik na skraju drogi</a>
-          <a href="hothouse.html" class="navigation__link navigation__link--last-one">Cieplarnia</a>
+            <a href="index.html" class="navigation__link">HOME</a>
+            <a href="peasants.html" class="navigation__link">Chłopi</a>
+            <a href="picnic.html" class="navigation__link">Piknik na skraju drogi</a>
+            <a href="hothouse.html" class="navigation__link navigation__link--last-one">Cieplarnia</a>
         </nav>
-      </header>
+    </header>
 
     <main class="main">
         <header class="main__header">
@@ -28,16 +28,49 @@
         <section class="section-intro">
             <h2 class="section-intro__header">Opis</h2>
             <img src="hothouse-cover.jpg" alt="powieść cieplarnia - okładka" class="section-intro__image">
-            <p class="section-intro__paragraph">Powieść fantastycznonaukowa angielskiego pisarza Briana W. Aldissa, opublikowana w 1962 roku. W
+            <p class="section-intro__paragraph">Powieść fantastycznonaukowa angielskiego pisarza Briana W. Aldissa,
+                opublikowana w 1962 roku. W
                 Polsce wydana w 1983 r. przez Iskry w serii Fantastyka-Przygoda, w tłumaczeniu Marka Marszała
             </p>
+        </section>
+
+        <section class="section">
+            <h2 class="section__header">Podstawowe informacje</h2>
+            <article class="article">
+                <h3 class="article__header">Dane w tabeli</h3>
+                
+                <table class="table">
+                    <caption>Kopia tabelki z Wikipedii</caption>
+                    <thead>
+                        <tr>
+                            <th>Cieplarnia Hothouse</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Autor</td>
+                            <td>Brian W. Aldiss</td>
+                        </tr>
+                        <tr>
+                            <td>Typ utworu</td>
+                            <td>powieść science fiction</td>
+                        </tr>
+                    </tbody>        
+                </table>
+
+            </article>
+            <article class="article">
+                <h3 class="article__header">Ciekawostki wypunkotwane</h3>
+                <p class="article__paragraph">tu będą punkciki</p>
+            </article>
         </section>
 
         <section class="section">
             <h2 class="section__header">Fragmenty</h2>
             <article class="article">
                 <h3 class="article__header">Pierwszy fragment</h3>
-                <p class="article__paragraph">Kilkoro dzieci wyszło w zielone światło, aby się pobawić. Pobiegły konarem, bacznie wypatrując
+                <p class="article__paragraph">Kilkoro dzieci wyszło w zielone światło, aby się pobawić. Pobiegły
+                    konarem, bacznie wypatrując
                     wrogów, nawołując się ściszonymi głosami. Szybko rosnący jagodobij przemykał ukosem do góry, kiście
                     jego lepkich owoców połyskiwały szkarłatem. Widać było, że jest zaaferowany wysiewem i dzieciom nic
                     nie grozi z jego strony. Minęły go pędem. Z pory ich snu skorzystał parzyperz, wyrastając za skrajem
@@ -45,13 +78,15 @@
             </article>
             <article class="article">
                 <h3 class="article__header">Drugi fragment</h3>
-                <p class="article__paragraph">Gren pognał z powrotem. Z powietrza spadła na niego osica, obwieszczając wściekłość tubalnym
+                <p class="article__paragraph">Gren pognał z powrotem. Z powietrza spadła na niego osica, obwieszczając
+                    wściekłość tubalnym
                     brzęczeniem. Odrzucił ją ciosem dłoni, nie zwalniając biegu. Rzadki okaz dziecka mężczyzny, lat
                     dziewięć, już bardzo śmiały, rączy i dumny. Szybko dotarł do chaty Prowodyrki.</p>
             </article>
             <article class="article">
                 <h3 class="article__header">Trzeci fragmnet</h3>
-                <p class="article__paragraph">Dziewczynka zdążyła się jeszcze podnieść na kolana. Roślinni drapieżcy nie są tak szybcy jak ludzie.
+                <p class="article__paragraph">Dziewczynka zdążyła się jeszcze podnieść na kolana. Roślinni drapieżcy nie
+                    są tak szybcy jak ludzie.
                     Zielone zęby zatrzasnęły się na jej talii. Wyczuwszy obecność ofiary przez pojedynczą warstwę
                     zieleni, gębokłap wyszedł na pozycję pod liściem. Przypominał nieco ramę – tylko para
                     zrogowaciałych, kwadratowych szczęk na zawiasach, z licznymi długimi zębami. Z narożnika ramy, na
@@ -64,13 +99,13 @@
 
     <footer class="footer">
         <p class="footer__paragraph">
-          Przemysław Grochowina - Copyleft 1982 - 2020<br />
-          Wszystkie opisy książek pochodzą z
-          <a href="https://pl.wikipedia.org/" target="_blank" class="footer__link">Wikipedii.</a><br />
-          <a href="#" class="footer__link footer__link--return-up">Powrót</a>
+            Przemysław Grochowina - Copyleft 1982 - 2020<br />
+            Wszystkie opisy książek pochodzą z
+            <a href="https://pl.wikipedia.org/" target="_blank" class="footer__link">Wikipedii.</a><br />
+            <a href="#" class="footer__link footer__link--return-up">Powrót</a>
         </p>
-      </footer>
-      <script src="main.js"></script>
+    </footer>
+    <script src="main.js"></script>
 </body>
 
 </html>
