adding table - first styles

--- a/hothouse.html
+++ b/hothouse.html
@@ -38,25 +38,26 @@
             <h2 class="section__header">Podstawowe informacje</h2>
             <article class="article">
                 <h3 class="article__header">Dane w tabeli</h3>
-                
-                <table class="table">
-                    <caption>Kopia tabelki z Wikipedii</caption>
-                    <thead>
-                        <tr>
-                            <th>Cieplarnia Hothouse</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Autor</td>
-                            <td>Brian W. Aldiss</td>
-                        </tr>
-                        <tr>
-                            <td>Typ utworu</td>
-                            <td>powieść science fiction</td>
-                        </tr>
-                    </tbody>        
-                </table>
+
+                <div class="debug-container">
+                    <table class="table">
+                        <thead class="table__head">
+                            <tr class="table__header">
+                                <th colspan="2">Cieplarnia Hothouse</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Autor</td>
+                                <td>Brian W. Aldiss</td>
+                            </tr>
+                            <tr>
+                                <td>Typ utworu</td>
+                                <td>powieść science fiction</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
 
             </article>
             <article class="article">
