adding table - header styles

--- a/hothouse.html
+++ b/hothouse.html
@@ -41,9 +41,9 @@
 
                 <div class="debug-container">
                     <table class="table">
-                        <thead class="table__head">
+                        <thead>
                             <tr class="table__header">
-                                <th colspan="2">Cieplarnia Hothouse</th>
+                                <th colspan="2"><span class=table__header--pl>Cieplarnia</span><span class="table__header--en">Hothouse</span></th>
                             </tr>
                         </thead>
                         <tbody>
