adding table - without links

--- a/hothouse.html
+++ b/hothouse.html
@@ -48,12 +48,46 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Autor</td>
-                                <td>Brian W. Aldiss</td>
+                                <td class="table__cell-left">Autor</td>
+                                <td class="table__cell-right">Brian W. Aldiss</td>
                             </tr>
                             <tr>
-                                <td>Typ utworu</td>
-                                <td>powieść science fiction</td>
+                                <td class="table__cell-left">Typ utworu</td>
+                                <td class="table__cell-right">powieść science fiction</td>
+                            </tr>
+                            <tr>
+                                <td colspan="2" class=table__subheader>Wydanie oryginalne</td>
+                            </tr>
+                            <tr>
+                                <td class="table__cell-left">Miejsce wydania</td>
+                                <td class="table__cell-right">Wielka Brytania</td>
+                            </tr>
+                            <tr>
+                                <td class="table__cell-left">Język</td>
+                                <td class="table__cell-right">angielski</td>
+                            </tr>
+                            <tr>
+                                <td class="table__cell-left">Data wydania</td>
+                                <td class="table__cell-right">1962</td>
+                            </tr>
+                            <tr>
+                                <td class="table__cell-left">Wydawca</td>
+                                <td class="table__cell-right"><span class="table__cell-right--red">Faber and Faber</span></td>
+                            </tr>
+                            <tr>
+                                <td colspan="2" class=table__subheader>Pierwsze wydanie polskie</td>
+                            </tr>
+                            <tr>
+                                <td class="table__cell-left">Data wydania polskiego</td>
+                                <td class="table__cell-right">1982</td>
+                            </tr>
+                            <tr>
+                                <td class="table__cell-left">Wydawca</td>
+                                <td class="table__cell-right">Iskry</td>
+                            </tr>
+                            <tr>
+                                <td class="table__cell-left">Przekład</td>
+                                <td class="table__cell-right"><span class="table__cell-right--red">Marek Marszał</span></td>
                             </tr>
                         </tbody>
                     </table>
