build(npm): Bump lodash from 4.17.15 to 4.17.19
solution-type: manually npm audit fix

--- a/hothouse.html
+++ b/hothouse.html
@@ -43,24 +43,30 @@
                     <table class="table">
                         <thead>
                             <tr class="table__header">
-                                <th colspan="2"><span class=table__header--pl>Cieplarnia</span><span class="table__header--en">Hothouse</span></th>
+                                <th colspan="2"><span class=table__header--pl>Cieplarnia</span><span
+                                        class="table__header--en">Hothouse</span></th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
                                 <td class="table__cell-left">Autor</td>
-                                <td class="table__cell-right">Brian W. Aldiss</td>
+                                <td class="table__cell-right"><a href="https://pl.wikipedia.org/wiki/Brian_Aldiss"
+                                        title="Brian Aldiss" class="table__cell-right--link">Brian W. Aldiss</a></td>
                             </tr>
                             <tr>
                                 <td class="table__cell-left">Typ utworu</td>
-                                <td class="table__cell-right">powieść science fiction</td>
+                                <td class="table__cell-right">powieść <a
+                                        href="https://pl.wikipedia.org/wiki/Fantastyka_naukowa"
+                                        title="Fantastyka naukowa" class="table__cell-right--link">science fiction</a>
+                                </td>
                             </tr>
                             <tr>
                                 <td colspan="2" class=table__subheader>Wydanie oryginalne</td>
                             </tr>
                             <tr>
                                 <td class="table__cell-left">Miejsce wydania</td>
-                                <td class="table__cell-right">Wielka Brytania</td>
+                                <td class="table__cell-right"><a href="https://pl.wikipedia.org/wiki/Wielka_Brytania"
+                                        title="Wielka Brytania" class="table__cell-right--link">Wielka Brytania</a></td>
                             </tr>
                             <tr>
                                 <td class="table__cell-left">Język</td>
@@ -72,7 +78,8 @@
                             </tr>
                             <tr>
                                 <td class="table__cell-left">Wydawca</td>
-                                <td class="table__cell-right"><span class="table__cell-right--red">Faber and Faber</span></td>
+                                <td class="table__cell-right"><span class="table__cell-right--red">Faber and
+                                        Faber</span></td>
                             </tr>
                             <tr>
                                 <td colspan="2" class=table__subheader>Pierwsze wydanie polskie</td>
@@ -87,7 +94,8 @@
                             </tr>
                             <tr>
                                 <td class="table__cell-left">Przekład</td>
-                                <td class="table__cell-right"><span class="table__cell-right--red">Marek Marszał</span></td>
+                                <td class="table__cell-right"><span class="table__cell-right--red">Marek Marszał</span>
+                                </td>
                             </tr>
                         </tbody>
                     </table>
